--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
+    "node-sass": "^9.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.64.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "nodemon": "^3.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   },
